# main

./: .gitignore  .gitmodules  LICENSE  README.md
S01_anatomy_of_stanford_aloha/: BUILD.md  S01E01_migration.md  S01E02_interbotix.md  S01E03_hardware.md  S01E03_robomimic.md  S01E04_aloha.md  S01E04_xsarm.md  S01E05_interbotix_bug.md
S01_anatomy_of_stanford_aloha/src/: package.xml  setup.cfg  setup.py
S01_anatomy_of_stanford_aloha/src/config/: puppet_modes_left.yaml  puppet_modes_right.yaml
S01_anatomy_of_stanford_aloha/src/interbotix_aloha/: CMakeLists.txt  package.xml
S01_anatomy_of_stanford_aloha/src/interbotix_aloha/config/: master_modes_left.yaml  master_modes_right.yaml  puppet_modes_left.yaml
S01_anatomy_of_stanford_aloha/src/interbotix_aloha/demo/: bartender_puppet.py
S01_anatomy_of_stanford_aloha/src/interbotix_aloha/launch/: xsarm_puppet.launch.py
S01_anatomy_of_stanford_aloha/src/interbotix_aloha/rviz/: stanford_aloha.rviz
S01_anatomy_of_stanford_aloha/src/interbotix_aloha/src/: xsarm_puppet_left.cpp  xsarm_puppet_right.cpp
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_dual/config/: modes_2.yaml
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_dual/demos/: xsarm_dual.py
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_dual_andy/: package.xml  setup.py
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_dual_andy/launch/: xsarm_dual.launch
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_dual_andy/rviz/: xsarm_dual.rviz
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_puppet/config/: leader_modes.yaml
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_puppet/demo/: bartender_puppet.py
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_puppet/launch/: README.md
S01_anatomy_of_stanford_aloha/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_control/config/: vx300.yaml
S01_anatomy_of_stanford_aloha/src/launch/: 4arms_teleop.launch
S01_anatomy_of_stanford_aloha/src/misc/: 99-interbotix-udev.rules
S01_anatomy_of_stanford_aloha/src/stanford_aloha/: one_side_teleop.py  setup.py
S01_anatomy_of_stanford_aloha/src/stanford_aloha/config/: master_modes_left.yaml
S02_mount_lerobot_brain/: S02E01_why_to_learn_lerobot  S02E01_why_to_learn_lerobot.md  S02E02_dataformat_lerobot.md  S02E03_dataformat_aloha.md  S02E04_train_lerobot_brain.md  S02E05_brain_ transplant.md  why_to_learn_lerobot.md
S03_unitree_robodog/: S03E01_unitree_go2_python_programming.md  S03E02_unitree_go2_arduino.md  S03E03_unitree_go2_jetson_orin.md  S03E04_unitree_go2_video_transmission.md  S03E05_unitree_go2_low_level_motion_contron_in_python.md  S03E06_unitree_go2_motion_data_visualization.md
S04_RL_for_unitree/: README.md  S04E01_Isaac_sim_lab_installation.md  S04E02_train_unitree_go2_with_isaac_lab.md  S04E03_anatomy_of_Isaac_lab.md
S05_communication/: README.md  (+2 more)
(+225 files in other folders)
