<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stanford_aloha</name>
  <version>0.0.0</version>
  <description>ALOHA: A Low-cost Open-source Hardware System for Bimanual Teleoperation</description>
  <maintainer email="kan.deng@qq.com">Kan Deng</maintainer>
  <license>MIT</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!--
  <buildtool_depend>ament_python</buildtool_depend>
  -->

  <depend>interbotix_xs_msgs</depend>
  <depend>interbotix_xsarm_control</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

